--- a/.github/workflows/block.yml
+++ b/.github/workflows/block.yml
@@ -4,7 +4,7 @@ on: workflow_dispatch
 
 jobs:
   start_main:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Run main file
